<resources>
    <string name="app_name">手机卫士</string>
    <string-array name="main_function_name">
        <item>手机防盗</item>
        <item>通讯卫士</item>
        <item>应用管理</item>
        <item>进程管理</item>
        <item>流量统计</item>
        <item>手机杀毒</item>
        <item>缓存清理</item>
        <item>高级工具</item>
        <item>设置中心</item>
    </string-array>
    <!--手机防盗设置向导第一步-->
    <string name="guide1_title">您的手机防盗卫士有以下功能</string>
    <string name="guide1_sim_alarm">Sim卡变更报警</string>
    <string name="guide1_gps_location">GPS追踪</string>
    <string name="guide1_far_ruin">远程数据销毁</string>
    <string name="guide1_far_lock">远程锁屏</string>
    <string name="device_guard_title">JPH-手机防盗</string>
    <string name="device_guard_description">开启防盗功能
    </string>
    <string name="add_admin_extra_app_text">JPH手机防盗需要激活设备管理(才能远程操作)</string>

    <!--设置的开启或关闭-->
    <string name="setting_open">开启</string>
    <string name="setting_close">关闭</string>
    <!--第一级设置：电话设置的主标题-->
    <string name="phoneCall_mainTitle">拨出和来电设置</string>
    <!--第一级设置：电话设置的副标题-->
    <string name="phoneCall_summaryTitle">拨出和来电的监听以及号码来源的显示颜色</string>
    <!--第二级设置：拨出和来电的监听-->
    <string name="secondSetting_mainTitle_phoneCall">拨出和来电的监听</string>
    <!--第二级设置：号码来源的显示颜色-->
    <string name="secondSetting_mainTitle_phoneCall_phoneSource_toastColor">号码来源的显示颜色</string>

</resources>
